# IsaacTeleop

./: .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md
docs/: conf.py  (+1 more)
examples/camera_streamer/: pyproject.toml
examples/oxr/cpp/: CMakeLists.txt  oxr_session_sharing.cpp  oxr_simple_api_demo.cpp
examples/oxr/python/: modular_example_with_mcap.py  pyproject.toml  test_controller_tracker.py  test_extensions.py  test_oak_camera.py
examples/retargeting/python/: pyproject.toml
examples/teleop/python/: pyproject.toml
examples/teleop_ros2/python/: pyproject.toml  teleop_ros2_node.py  teleop_ros2_publisher.py
examples/teleop_session_manager/python/: message_channel_example.py  pyproject.toml  teleop_controls_simple_example.py  teleop_controls_simple_helper.py
examples/televiz/window_smoke/: CMakeLists.txt  main.cpp
src/core/: AGENTS.md  CMakeLists.txt
src/core/cloudxr/python/: CMakeLists.txt  __init__.py  __main__.py  env_config.py  launcher.py  oob_teleop_adb.py  oob_teleop_env.py  oob_teleop_hub.py  runtime.py  util.py  wss.py
src/core/cloudxr_tests/: CMakeLists.txt
src/core/cloudxr_tests/python/: CMakeLists.txt  conftest.py  pyproject.toml  test_launcher.py  test_oob_teleop_adb.py  test_oob_teleop_env.py  test_oob_teleop_hub.py  test_runtime.py
src/core/deviceio/cpp/: controller_tracker.cpp  deviceio_session.cpp  full_body_tracker_pico.cpp
src/core/deviceio/cpp/inc/deviceio/: controller_tracker.hpp
src/core/deviceio_base/: AGENTS.md
src/core/deviceio_base/cpp/: CMakeLists.txt  tracker_factory.cpp
src/core/deviceio_base/cpp/inc/deviceio_base/: controller_tracker_base.hpp  frame_metadata_tracker_oak_base.hpp  full_body_tracker_pico_base.hpp  generic_3axis_pedal_tracker_base.hpp  hand_tracker_base.hpp  head_tracker_base.hpp  message_channel_tracker_base.hpp  tracker.hpp  tracker_factory.hpp
src/core/deviceio_session/: AGENTS.md  CMakeLists.txt
src/core/deviceio_session/cpp/: CMakeLists.txt  deviceio_session.cpp  mcap_impl.cpp  replay_session.cpp
src/core/deviceio_session/cpp/inc/deviceio_session/: deviceio_session.hpp  (+1 more)
src/core/deviceio_session/py_utils/: CMakeLists.txt
src/core/deviceio_session/python/: CMakeLists.txt  deviceio_session_init.py  session_bindings.cpp
src/core/deviceio_trackers/: AGENTS.md  CMakeLists.txt
src/core/deviceio_trackers/cpp/: CMakeLists.txt  controller_tracker.cpp  frame_metadata_tracker_oak.cpp  full_body_tracker_pico.cpp  generic_3axis_pedal_tracker.cpp  hand_tracker.cpp  head_tracker.cpp  message_channel_tracker.cpp
src/core/deviceio_trackers/python/: CMakeLists.txt  deviceio_trackers_init.py  tracker_bindings.cpp
src/core/live_trackers/: AGENTS.md  CMakeLists.txt
src/core/live_trackers/cpp/: CMakeLists.txt  live_controller_tracker_impl.cpp  live_controller_tracker_impl.hpp  live_deviceio_factory.cpp  live_frame_metadata_tracker_oak_impl.cpp  live_frame_metadata_tracker_oak_impl.hpp  live_full_body_tracker_pico_impl.cpp  live_full_body_tracker_pico_impl.hpp  live_generic_3axis_pedal_tracker_impl.cpp  live_generic_3axis_pedal_tracker_impl.hpp  live_hand_tracker_impl.cpp  live_hand_tracker_impl.hpp  live_head_tracker_impl.cpp  live_head_tracker_impl.hpp  live_message_channel_tracker_impl.cpp  live_message_channel_tracker_impl.hpp  schema_tracker.cpp
src/core/mcap/cpp/: CMakeLists.txt  mcap_recorder.cpp
src/core/mcap/python/: CMakeLists.txt  mcap_bindings.cpp
src/core/mcap_tests/cpp/: test_mcap_recorder.cpp
src/core/python/: CMakeLists.txt  deviceio_init.py  isaacteleop_init.py  pyproject.toml.in  stubgen_pyproject.toml
src/core/replay_deviceio_session_tests/cpp/: CMakeLists.txt  test_replay_session.cpp
src/core/replay_trackers/: CMakeLists.txt
src/core/replay_trackers/cpp/: CMakeLists.txt  replay_controller_tracker_impl.cpp  replay_controller_tracker_impl.hpp  replay_deviceio_factory.cpp  replay_full_body_tracker_pico_impl.cpp  replay_full_body_tracker_pico_impl.hpp  replay_generic_3axis_pedal_tracker_impl.cpp  replay_generic_3axis_pedal_tracker_impl.hpp  replay_hand_tracker_impl.cpp  replay_hand_tracker_impl.hpp  replay_head_tracker_impl.cpp  replay_head_tracker_impl.hpp
src/core/retargeting_engine/python/deviceio_source_nodes/: __init__.py  deviceio_tensor_types.py  message_channel_config.py  message_channel_sink.py  message_channel_source.py
src/core/retargeting_engine/python/interface/: __init__.py  base_retargeter.py  execution_events.py  output_combiner.py  retargeter_core_types.py  retargeter_subgraph.py  tensor_group.py
src/core/retargeting_engine/python/utilities/: controller_transform.py  hand_transform.py  head_transform.py  transform_utils.py
src/core/retargeting_engine_tests/python/: pyproject.toml  test_message_channel_nodes.py  test_retargeter_reset.py  test_tensor_group.py  test_transform_numpy_versions.py  test_transforms.py  transform_numpy_version_smoke.py
src/core/retargeting_engine_ui/python/: __init__.py
src/core/schema/fbs/: message_channel.fbs
src/core/schema/python/: CMakeLists.txt  message_channel_bindings.h  schema_init.py  schema_module.cpp
src/core/schema_tests/python/: pyproject.toml
src/core/teleop_session_manager/: CMakeLists.txt
src/core/teleop_session_manager/python/: __init__.py  async_retarget_runner.py  config.py  helpers.py  input_selector.py  teleop_session.py  teleop_state_manager_retargeter.py  teleop_state_manager_types.py
src/core/teleop_session_manager_tests/python/: pyproject.toml  test_pipeline_introspection.py  test_session_reset.py  test_teleop_session.py
src/devops/gh-project-sync/: pyproject.toml
src/devops/gh-project-sync/github_project_sync/: __main__.py  config.py  github.py  sheets.py
src/plugins/controller_synthetic_hands/: CMakeLists.txt
src/plugins/controller_synthetic_hands/inc/controller_synthetic_hands/: synthetic_hands_plugin.hpp
src/plugins/oak/: CMakeLists.txt  README.md  main.cpp
src/plugins/oak/core/: oak_camera.cpp  oak_camera.hpp  preview_stream.cpp  preview_stream.hpp
src/viz/layers/cpp/: CMakeLists.txt  quad_layer.cpp
src/viz/layers_tests/cpp/: CMakeLists.txt  test_quad_layer.cpp
(+88 files in other folders)
