# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "teleop-examples"
version = "0.1.0"
description = "Isaac Teleop Retargeting Examples"
requires-python = ">=3.10,<3.14"
dependencies = [
    "isaacteleop[retargeters]",
]
