# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "teleop-utils-examples"
version = "0.0.0"  # Internal examples - not versioned
description = "TeleopUtils Python Examples"
requires-python = ">=3.10,<3.14"
dependencies = [
    "isaacteleop[ui]",
    "numpy>=1.23.0",
]
