# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# ==============================================================================
# OAK Camera Plugin
# ==============================================================================
# Uses FetchContent with HunterGate initialized at top-level for single-pass build.
# ==============================================================================

include(FetchContent)

# ==============================================================================
# DepthAI Setup
# ==============================================================================
message(STATUS "Configuring DepthAI...")

# Configure DepthAI build options
set(DEPTHAI_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(DEPTHAI_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(DEPTHAI_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(DEPTHAI_OPENCV_SUPPORT OFF CACHE BOOL "" FORCE)

FetchContent_Declare(
    depthai
    URL https://github.com/luxonis/depthai-core/releases/download/v2.31.0/depthai-core-v2.31.0.tar.gz
)

FetchContent_MakeAvailable(depthai)

message(STATUS "Building OAK camera plugin with DepthAI ${depthai_VERSION}")

# ==============================================================================
# SDL2 (for live preview window, bundled via FetchContent)
# ==============================================================================
set(SDL2_VERSION "2.32.10")

set(SDL_TEST OFF CACHE BOOL "" FORCE)
set(SDL_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_STATIC ON CACHE BOOL "" FORCE)

FetchContent_Declare(
    sdl2
    URL "https://github.com/libsdl-org/SDL/releases/download/release-${SDL2_VERSION}/SDL2-${SDL2_VERSION}.tar.gz"
    URL_HASH "SHA256=5f5993c530f084535c65a6879e9b26ad441169b3e25d789d83287040a9ca5165"
)
FetchContent_MakeAvailable(sdl2)
message(STATUS "SDL2 ${SDL2_VERSION} — live preview support enabled")

# ==============================================================================
# Build OAK Plugin
# ==============================================================================
add_executable(camera_plugin_oak
    main.cpp
    core/oak_camera.cpp
    core/rawdata_writer.cpp
    core/frame_sink.cpp
    core/preview_stream.cpp
)

target_link_libraries(camera_plugin_oak
    PRIVATE
        depthai::core
        isaacteleop_schema
        mcap::mcap
        oxr::oxr_core
        pusherio::pusherio
        SDL2::SDL2-static
)

# Set RPATH so the binary finds bundled shared libraries (e.g. libusb) in its own directory
set_target_properties(camera_plugin_oak PROPERTIES
    INSTALL_RPATH "$ORIGIN"
)

install(TARGETS camera_plugin_oak
    RUNTIME DESTINATION plugins/oak_camera
)

install(FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/plugin.yaml"
    "${CMAKE_CURRENT_SOURCE_DIR}/README.md"
    DESTINATION plugins/oak_camera
)

# Install libusb from depthai dependencies (required at runtime)
# The library is built by depthai and installed to its dependencies folder
install(CODE "
    # Find libusb in depthai's dependency installation
    set(LIBUSB_SOURCE \"\${CMAKE_INSTALL_PREFIX}/lib/cmake/depthai/dependencies/lib/libusb-1.0.so\")
    set(LIBUSB_DEST \"\${CMAKE_INSTALL_PREFIX}/plugins/oak_camera/libusb-1.0.so\")

    if(EXISTS \"\${LIBUSB_SOURCE}\")
        message(STATUS \"Installing libusb-1.0.so from depthai dependencies to plugin directory\")
        file(COPY \"\${LIBUSB_SOURCE}\" DESTINATION \"\${CMAKE_INSTALL_PREFIX}/plugins/oak_camera/\")
    else()
        message(WARNING \"libusb-1.0.so not found at \${LIBUSB_SOURCE}\")
    endif()
")
